# SDL2_Engine_Project

./: .gitignore  LICENSE.md  Presentation1.pptx  README.md  SDL2_Engine_Project.sln  SDL2_Engine_Project.vcxproj  SDL2_Engine_Project.vcxproj.filters  TODO.xlsx  imgui.ini
Config/: Button.cfg  Checkbox.cfg  Config.cfg  Font.cfg  Image.cfg  ImageBox.cfg  Label.cfg  Menu.cfg  RadioButton.cfg  Settings.cfg  Sound.cfg  String.cfg  Text.cfg  Textbox.cfg
Config/Config_XLSX/: Config.xlsm  System.xlsm
Installer/: README.txt  script.iss
Project/: CMakeLists.txt  build_linux_distr.sh  build_win_distr.bat  gen_prj_cmake_linux.sh  gen_prj_cmake_windows.bat  gen_prj_linux.sh  gen_prj_windows.bat  premake5.lua
Source/Application/: AppHelpers.h  main.cpp  stdafx.h
Source/Application/Application/: Application.cpp  Application.h  ConfigManager.cpp  ConfigManager.h
Source/Application/Game/: Camera.cpp  Game.cpp  Game.h  GameManager.cpp  GameManager.h
Source/System/: stdafx.h
Source/System/Defines/: ConfigFilePaths.h
Source/System/Managers/: AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  DrawManager.cpp  DrawManager.h  ImGuiManager.cpp  ImGuiManager.h  ManagersHelpers.cpp  TimerManager.cpp  TimerManager.h
Source/System/SDLUtils/: SDLLoader.cpp  SDLLoader.h
Source/System/Utils/: Defines.h
config/: assets.cfg  assets_config.xlsm  clear_temp.bat  config.cfg  config.xlsm  objects.cfg  objects_config.xlsm  settings.cfg  system.cfg  system.xlsm  system_config.xlsm
config/assets/: fonts.cfg  images.cfg  sounds.cfg  texts.cfg
config/config_xlsx/: config.xlsm  system.xlsm
config/sdl/: renderer.cfg  window.cfg
dependencies/SDL2/: ReadMe.txt
prj/: build_linux_distr.sh  build_win_distr.bat  gen_prj_linux.sh  gen_prj_vs2019.bat  gen_prj_windows.bat  premake5.lua
prj/vs2019/: premake5.lua
source/: main.cpp  stdafx.h
source/Application/: App.cpp  App.h  AppHelpers.cpp  main.cpp  stdafx.h
source/Application/Application/: Application.cpp  Application.h
source/Application/config/: AppConfig.cpp  AppConfig.h
source/Application/defines/: Defines.h
source/Application/engine/: Engine.cpp  Engine.h
source/Application/game/: Camera.cpp  Camera.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h
source/Application/test_opengl/: OpenGLExperiment.cpp
source/app/: App.cpp  App.h  AppHelpers.cpp  AppHelpers.h  Application.vcxproj  Application.vcxproj.filters  Defines.h  IApp.h  OpenGLExperiment.cpp  OpenGLExperiment.h  main.cpp  stdafx.h
source/app/components/: Component.cpp  Component.h  GameWorldPositionComponent.cpp  GameWorldPositionComponent.h  ImageComponent.cpp  ImageComponent.h
source/app/config/: AppConfig.cpp  AppConfig.h
source/app/engine/: Engine.cpp  Engine.h
source/app/game/: Camera.cpp  Camera.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h
source/app/test_opengl/: OpenGLExperiment.cpp
source/components/audio/: AudioObject.cpp  AudioObject.h  Music.cpp  Music.h  Sound.cpp  Sound.h
source/components/drawing/: DrawObject.cpp  DrawObject.h  DynamicText.cpp  DynamicText.h  Image.cpp  Image.h  Text.cpp  Text.h
source/components/time/: Timer.cpp  Timer.h
source/components/ui/: Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  RadioButton.cpp  RadioButton.h  TextBox.cpp  TextBox.h
source/defines/: ConfigFilePaths.h  FontDefines.cpp  FontDefines.h  FrequentIncludes.h  ImageDefines.cpp  ImageDefines.h  MusicDefines.cpp  MusicDefines.h  SoundDefines.cpp  SoundDefines.h
source/defines/consts/: GlobalConstants.cpp  GlobalConstants.h
source/defines/id/: FontId.h  (+4 more)
source/engine/: Engine.cpp  Engine.h  EngineConfigLoader.cpp  EngineConfigLoader.h  EngineConfigLoaderUtils.cpp  EngineConfigLoaderUtils.h
source/game/: Game.cpp  Game.h
source/managers/: AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  CommonIncludes.h  Defines.h  DrawManager.cpp  DrawManager.h  IManager.cpp  IManager.h  ImGuiManager.cpp  ImGuiManager.h  Manager.cpp  Manager.h  ManagerHandler.cpp  ManagerHandler.h  ManagersDefines.h  ManagersHelpers.cpp  ManagersHelpers.h  TimerManager.cpp  TimerManager.h
source/sdl_utils/: CommonIncludes.h  Defines.h  Renderer.cpp  Renderer.h  SDLLoader.cpp  SDLLoader.h  SDLUtilsCommonIncludes.h  SDLUtilsDefines.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  Window.cpp  Window.h
source/system/: System.vcxproj  System.vcxproj.filters  main.cpp  stdafx.h
source/utils/: CommonIncludes.h  Defines.h  UtilsCommonIncludes.h  UtilsDefines.h
(+575 files in other folders)
